--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "url": "https://github.com/s-arslaan/test/issues"
   },
   "homepage": "https://github.com/s-arslaan/test#readme",
-  "devDependencies": {
-    "lite-server": "^2.5.4"
-  },
+  "devDependencies": {},
   "dependencies": {
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.16.1"
   }
 }
