--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {},
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
